--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -24,6 +24,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <link href="https://api.mapbox.com/mapbox-gl-js/v1.12.0/mapbox-gl.css" rel="stylesheet" />    <title>React App</title>
+    <script src="https://kit.fontawesome.com/1ddcb6ee5f.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
